k8s/ibm-apiconnect-distributed.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ibm-apiconnect-metrics-service
  namespace: apic-operator
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: apiconnect-operator
    app.kubernetes.io/name: ibm-apiconnect
    name: ibm-apiconnect
---
apiVersion: v1
kind: Service
metadata:
  name: ibm-apiconnect-webhook-service
  namespace: apic-operator
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/component: apiconnect-operator
    app.kubernetes.io/name: ibm-apiconnect
    name: ibm-apiconnect
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: 
  name: ibm-apiconnect-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ibm-apiconnect-webhook-service
      namespace: apic-operator
      path: "/mutate-analytics-apiconnect-ibm-com-v1beta1-analyticscluster"
  failurePolicy: Fail
  name: manalyticscluster.kb.io
  rules:
  - apiGroups:
    - analytics.apiconnect.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - analyticsclusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ibm-apiconnect-webhook-service
      namespace: apic-operator
      path: "/mutate-gateway-apiconnect-ibm-com-v1beta1-gatewaycluster"
  failurePolicy: Fail
  name: mgatewaycluster.kb.io
  rules:
  - apiGroups:
    - gateway.apiconnect.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - gatewayclusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ibm-apiconnect-webhook-service
      namespace: apic-operator
      path: "/mutate-management-apiconnect-ibm-com-v1beta1-managementbackup"
  failurePolicy: Fail
  name: mmanagementbackup.kb.io
  rules:
  - apiGroups:
    - management.apiconnect.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - managementbackups
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ibm-apiconnect-webhook-service
      namespace: apic-operator
      path: "/mutate-management-apiconnect-ibm-com-v1beta1-managementcluster"
  failurePolicy: Fail
  name: mmanagementcluster.kb.io
  rules:
  - apiGroups:
    - management.apiconnect.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - managementclusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ibm-apiconnect-webhook-service
      namespace: apic-operator
      path: "/mutate-management-apiconnect-ibm-com-v1beta1-managementdbupgrade"
  failurePolicy: Fail
  name: mmanagementdbupgrade.kb.io
  rules:
  - apiGroups:
    - management.apiconnect.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - managementdbupgrades
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ibm-apiconnect-webhook-service
      namespace: apic-operator
      path: "/mutate-management-apiconnect-ibm-com-v1beta1-managementrestore"
  failurePolicy: Fail
  name: mmanagementrestore.kb.io
  rules:
  - apiGroups:
    - management.apiconnect.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - managementrestores
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ibm-apiconnect-webhook-service
      namespace: apic-operator
      path: "/mutate-portal-apiconnect-ibm-com-v1beta1-portalcluster"
  failurePolicy: Fail
  name: mportalcluster.kb.io
  rules:
  - apiGroups:
    - portal.apiconnect.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - portalclusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ibm-apiconnect-webhook-service
      namespace: apic-operator
      path: "/mutate-apiconnect-ibm-com-v1beta1-apiconnectcluster"
  failurePolicy: Fail
  name: mapiconnectcluster.kb.io
  rules:
  - apiGroups:
    - apiconnect.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - apiconnectclusters
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: 
  name: ibm-apiconnect-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ibm-apiconnect-webhook-service
      namespace: apic-operator
      path: "/validate-analytics-apiconnect-ibm-com-v1beta1-analyticscluster"
  failurePolicy: Fail
  name: vanalyticscluster.kb.io
  rules:
  - apiGroups:
    - analytics.apiconnect.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - analyticsclusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ibm-apiconnect-webhook-service
      namespace: apic-operator
      path: "/validate-gateway-apiconnect-ibm-com-v1beta1-gatewaycluster"
  failurePolicy: Fail
  name: vgatewaycluster.kb.io
  rules:
  - apiGroups:
    - gateway.apiconnect.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - gatewayclusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ibm-apiconnect-webhook-service
      namespace: apic-operator
      path: "/validate-management-apiconnect-ibm-com-v1beta1-managementbackup"
  failurePolicy: Fail
  name: vmanagementbackup.kb.io
  rules:
  - apiGroups:
    - management.apiconnect.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - managementbackups
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ibm-apiconnect-webhook-service
      namespace: apic-operator
      path: "/validate-management-apiconnect-ibm-com-v1beta1-managementcluster"
  failurePolicy: Fail
  name: vmanagementcluster.kb.io
  rules:
  - apiGroups:
    - management.apiconnect.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - managementclusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ibm-apiconnect-webhook-service
      namespace: apic-operator
      path: "/validate-management-apiconnect-ibm-com-v1beta1-managementdbupgrade"
  failurePolicy: Fail
  name: vmanagementdbupgrade.kb.io
  rules:
  - apiGroups:
    - management.apiconnect.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - managementdbupgrades
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ibm-apiconnect-webhook-service
      namespace: apic-operator
      path: "/validate-management-apiconnect-ibm-com-v1beta1-managementrestore"
  failurePolicy: Fail
  name: vmanagementrestore.kb.io
  rules:
  - apiGroups:
    - management.apiconnect.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - managementrestores
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ibm-apiconnect-webhook-service
      namespace: apic-operator
      path: "/validate-portal-apiconnect-ibm-com-v1beta1-portalcluster"
  failurePolicy: Fail
  name: vportalcluster.kb.io
  rules:
  - apiGroups:
    - portal.apiconnect.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - portalclusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ibm-apiconnect-webhook-service
      namespace: apic-operator
      path: "/validate-portal-apiconnect-ibm-com-v1beta1-portalsecretrotation"
  failurePolicy: Fail
  name: vportalsecretrotation.kb.io
  rules:
  - apiGroups:
    - portal.apiconnect.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - portalsecretrotations
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ibm-apiconnect-webhook-service
      namespace: apic-operator
      path: "/validate-apiconnect-ibm-com-v1beta1-apiconnectcluster"
  failurePolicy: Fail
  name: vapiconnectcluster.kb.io
  rules:
  - apiGroups:
    - apiconnect.ibm.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - apiconnectclusters
  sideEffects: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    cloudpakId: c8b82d189e7545f0892db9ef2731b90d
    cloudpakName: IBM Cloud Pak for Integration
    productID: 2c717d4ecc924aa5ac345015b55492eb
    productMetric: FREE
    productName: IBM API Connect Enterprise
    productVersion: 10.0.1.9-5827-eus
  name: ibm-apiconnect
  namespace: apic-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: apiconnect-operator
      app.kubernetes.io/name: ibm-apiconnect
      name: ibm-apiconnect
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        cloudpakId: c8b82d189e7545f0892db9ef2731b90d
        cloudpakName: IBM Cloud Pak for Integration
        kubectl.kubernetes.io/default-container: ibm-apiconnect
        productID: 2c717d4ecc924aa5ac345015b55492eb
        productMetric: FREE
        productName: IBM API Connect Enterprise
        productVersion: 10.0.1.9-5827-eus
      labels:
        app.kubernetes.io/component: apiconnect-operator
        app.kubernetes.io/instance: ibm-apiconnect
        app.kubernetes.io/managed-by: ibm-apiconnect
        app.kubernetes.io/name: ibm-apiconnect
        name: ibm-apiconnect
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - s390x
      containers:
      - args:
        - "--enable-leader-election"
        command:
        - "/manager"
        image: icr.io/cpopen/ibm-apiconnect-operator@sha256:1bd07128df9e0f500acb2004476d7e7a8017c9d8cba335c462c2c08baa640168
        name: ibm-apiconnect
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 75m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
        volumeMounts:
        - mountPath: "/tmp/k8s-webhook-server/serving-certs"
          name: cert
          readOnly: true
      imagePullSecrets:
      - name: apic-registry-secret
      securityContext:
        runAsNonRoot: true
      serviceAccountName: ibm-apiconnect
      terminationGracePeriodSeconds: 10
      volumes:
      - emptyDir: {}
        name: cert
